On/off are combined to Toggle (key).

--- a/FPDM.ini
+++ b/FPDM.ini
@@ -1,10 +1,9 @@
-; Last-Modified: Mon, 15 Dec 2014 02:58:21 KST
+; Last-Modified: Mon, 15 Dec 2014 04:15:18 KST
 ; Author: Jongmin Kim (kdzlvaids@gmail.com)
 ; Name: FPDM.ini
 
 [BIND_KEY]
-ENABLE=49
-DISABLE=51
+TOGGLE=49
 LEFT=81
 RIGHT=69
 BEHIND=4
@@ -13,8 +12,7 @@ BEHIND=4
 ; Using the default settings,
 ; 
 ; [BIND_KEY]
-; ENABLE=49	1
-; DISABLE=51	3
+; TOGGLE=49	1
 ; LEFT=81	Q
 ; RIGHT=69	E
 ; BEHIND=4	middle mouse button
