--- a/FPDM.ini
+++ b/FPDM.ini
@@ -1,6 +1,9 @@
-; Last-Modified: Mon, 15 Dec 2014 04:15:18 KST
+; Last-Modified: Mon, 19 Dec 2014 19:53:54 KST
 ; Author: Jongmin Kim (kdzlvaids@gmail.com)
 ; Name: FPDM.ini
+
+[GENERAL]
+DEFAULT_VIEW=0
 
 [BIND_KEY]
 TOGGLE=49
@@ -11,10 +14,13 @@ BEHIND=4
 ; 
 ; Using the default settings,
 ; 
+; [GENERAL]
+; DEFAULT_VIEW=0	0: off, 1: on, 2: using last status
+; 
 ; [BIND_KEY]
-; TOGGLE=49	1
-; LEFT=81	Q
-; RIGHT=69	E
+; TOGGLE=49		1
+; LEFT=81		Q
+; RIGHT=69		E
 ; BEHIND=4	middle mouse button
 ; 
 ; Here are the key codes: http://www.gta-modding.com/san_andreas/tutorials/virtual_key_codes.html
