REMOVE_WINDOW added

--- a/FPDM.ini
+++ b/FPDM.ini
@@ -4,6 +4,7 @@
 
 [GENERAL]
 DEFAULT_VIEW=0
+REMOVE_WINDOW=
 
 [BIND_KEY]
 TOGGLE=49
@@ -15,11 +16,12 @@ RIGHT=69
 ; 
 ; [GENERAL]
 ; DEFAULT_VIEW=0	0: off, 1: on, 2: using last status
+; REMOVE_WINDOW=0	0: no,  1: yes (If you want to see traffic lights, change it to 1.)
 ; 
 ; [BIND_KEY]
-; TOGGLE=49		1
-; LEFT=81		Q
-; RIGHT=69		E
+; TOGGLE=49       1
+; LEFT=81         Q
+; RIGHT=69        E
 ; 
 ; Here are the key codes: http://www.gta-modding.com/san_andreas/tutorials/virtual_key_codes.html
 ; 
