REMOVE_WINDOW set to 0

--- a/FPDM.ini
+++ b/FPDM.ini
@@ -1,10 +1,10 @@
-; Last-Modified: Mon, 19 Dec 2014 22:33:37 KST
+; Last-Modified: Sat, 20 Dec 2014 21:46:35 KST
 ; Author: Jongmin Kim (kdzlvaids@gmail.com)
 ; Name: FPDM.ini
 
 [GENERAL]
 DEFAULT_VIEW=0
-REMOVE_WINDOW=
+REMOVE_WINDOW=0
 
 [BIND_KEY]
 TOGGLE=49
